Fix: Responsive headers align

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -14,6 +14,15 @@
   margin-top: 128px;
 }
 
+.heroText {
+  font-family: "Montserrat";
+  font-weight: regular;
+  font-size: 36px;
+  color: #000000;
+  text-align: center;
+}
+
+
 @media (min-width: 1365px) {
 
 
@@ -21,13 +30,6 @@
     position: relative;
   }
 
-  .heroText {
-    font-family: "Montserrat";
-    font-weight: regular;
-    font-size: 36px;
-    color: #000000;
-    text-align: center;
-  }
 
   .heroImage {
     right: -12.5em;
@@ -67,5 +69,9 @@
 
   .worksContainer {
     margin-top: 128px !important;
+  }
+
+  .latestWorksText {
+    text-align: center;
   }
 }
