--- a/src/styles/works.module.css
+++ b/src/styles/works.module.css
@@ -12,27 +12,23 @@
     transition: 0.3s ease-out;
 }
 
-
-@media (min-width: 1365px) {
-    .gridHeroStack {
-        width: 174px;
-        height: 160px;
-
-    }
-
-    .gridHeroImage {
-        width: 80px;
-        height: 80px;
-    }
-
-    .gridHeroText {
-        font-size: 18px;
-    }
+.gridHeroStack {
+    width: 174px;
+    height: 160px;
 
 }
 
+.gridHeroImage {
+    width: 80px;
+    height: 80px;
+}
 
-@media (max-width: 950px) {
+.gridHeroText {
+    font-size: 18px;
+}
+
+
+@media (max-width: 500px) {
     .gridHeroStack {
         width: 110px;
         height: 100px;
